force-app/main/default/objects/Archivo_url__c/Archivo_url__c.object-meta.xml
<CustomObject>
    <label>Archivo url</label>
    <nameField>
        <label>Nombre de Archivo url</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archivos url</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>