force-app/main/default/objects/Archivo_url__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Archivos url</relationshipLabel>
    <relationshipName>Archivos_url</relationshipName>
    <type>Lookup</type>
</CustomField>