force-app/main/default/objects/Archivo_url__c/fields/Enviado__c.field-meta.xml
<CustomField>
    <fullName>Enviado__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enviado</label>
    <type>Checkbox</type>
</CustomField>