force-app/main/default/objects/Archivo_url__c/fields/Nombre_original__c.field-meta.xml
<CustomField>
    <fullName>Nombre_original__c</fullName>
    <label>Nombre original</label>
    <length>80</length>
    <type>Text</type>
</CustomField>