force-app/main/default/objects/Archivo_url__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Archivos url</relationshipLabel>
    <relationshipName>Archivos_url</relationshipName>
    <type>Lookup</type>
</CustomField>