force-app/main/default/objects/Archivo_url__c/fields/Ruta_relativa__c.field-meta.xml
<CustomField>
    <fullName>Ruta_relativa__c</fullName>
    <label>Ruta relativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>